--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
             <id>codemc-repo</id>
             <url>https://repo.codemc.org/repository/maven-public/</url>
         </repository>
+        <!-- for hakan-krgn/spigot-injection -->
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -90,10 +95,65 @@
             <version>24.1.0</version>
             <scope>provided</scope>
         </dependency>
+        <!-- Core of dependency injection -->
+        <dependency>
+            <groupId>com.github.hakan-krgn.spigot-injection</groupId>
+            <artifactId>injection-core</artifactId>
+            <version>${spigot-injection.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <!-- Annotation based config support
+        <dependency>
+            <groupId>com.github.hakan-krgn.spigot-injection</groupId>
+            <artifactId>injection-config</artifactId>
+            <version>${spigot-injection.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        -->
+        <!-- Annotation based command support -->
+        <dependency>
+            <groupId>com.github.hakan-krgn.spigot-injection</groupId>
+            <artifactId>injection-command</artifactId>
+            <version>${spigot-injection.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <!-- Annotation based listener support
+        <dependency>
+            <groupId>com.github.hakan-krgn.spigot-injection</groupId>
+            <artifactId>injection-listener</artifactId>
+            <version>${spigot-injection.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        -->
+        <!-- Annotation based scheduler support
+        <dependency>
+            <groupId>com.github.hakan-krgn.spigot-injection</groupId>
+            <artifactId>injection-scheduler</artifactId>
+            <version>${spigot-injection.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        -->
+        <!-- Native database support
+        <dependency>
+            <groupId>com.github.hakan-krgn.spigot-injection</groupId>
+            <artifactId>injection-database-native</artifactId>
+            <version>${spigot-injection.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        -->
+        <!-- Hibernate database support (you need to add hibernate dependency to your project as extra)
+        <dependency>
+            <groupId>com.github.hakan-krgn.spigot-injection</groupId>
+            <artifactId>injection-database-hibernate</artifactId>
+            <version>${spigot-injection.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        -->
     </dependencies>
 
     <properties>
         <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <spigot-injection.version>0.1.5.0</spigot-injection.version>
     </properties>
 </project>
