Dependency injection: Replace command /fart

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,3 +5,13 @@ api-version: '1.20'
 prefix: mcpluginplayground
 authors: [ DeKuen ]
 description: Random farts while sneaking! Playground for plugin development
+
+permissions:
+  fart:
+    description: Gives access to all fart commands
+    default: true
+    children:
+      command.use: true
+  command.use:
+    description: Allows use to command /fart
+    default: true
