--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ch.notyourbiz.minecraft.plugin</groupId>
-    <artifactId>mc-plugin-playground</artifactId>
+    <artifactId>mcpluginplayground</artifactId>
 
-    <name>mc-plugin-playground</name>
+    <name>mcpluginplayground</name>
     <version>0.1-SNAPSHOT</version>
 
     <build>
